ccnavmenus/force-app/main/default/objects/Menu__c/fields/Cache_Partition__c.field-meta.xml
<CustomField>
    <fullName>Cache_Partition__c</fullName>
    <label>Cache Partition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>