ccnavmenus/force-app/main/default/objects/Menu__c/fields/Cache_Time_To_Live__c.field-meta.xml
<CustomField>
    <fullName>Cache_Time_To_Live__c</fullName>
    <defaultValue>86400</defaultValue>
    <label>Cache Time To Live (in Seconds)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>