ccnavmenus/force-app/main/default/objects/Menu__c/fields/Enable_Cache__c.field-meta.xml
<CustomField>
    <fullName>Enable_Cache__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Cache</label>
    <type>Checkbox</type>
</CustomField>